--- a/src/AspNetCore/src/App.Metrics.AspNetCore.Abstractions/App.Metrics.AspNetCore.Abstractions.csproj
+++ b/src/AspNetCore/src/App.Metrics.AspNetCore.Abstractions/App.Metrics.AspNetCore.Abstractions.csproj
@@ -2,22 +2,14 @@
 
 	<PropertyGroup>
 		<Description>App Metrics ASP.NET Core abstractions and interfaces for routing, HTTP response formatting and more.</Description>
-		<TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<PackageTags>appmetrics;aspnetcore;metrics</PackageTags>	  
 		<RootNamespace>App.Metrics.AspNetCore</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="App.Metrics.Abstractions" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
-	</ItemGroup>
-
-	<ItemGroup  Condition="'$(TargetFramework)' == 'netstandard2.0'">
-		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" />
-		<PackageReference Include="Microsoft.AspNetCore.Routing.Abstractions" />
+		<PackageReference Include="App.Metrics.Abstractions" />
 	</ItemGroup>
 	
 </Project>
