--- a/src/AspNetCore/src/App.Metrics.AspNetCore.Endpoints/App.Metrics.AspNetCore.Endpoints.csproj
+++ b/src/AspNetCore/src/App.Metrics.AspNetCore.Endpoints/App.Metrics.AspNetCore.Endpoints.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>App Metrics ASP.NET Core Endpoints provides the ability to expose metrics and environment information as web endpoints.</Description>
-    <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageTags>appmetrics;aspnetcore;metrics</PackageTags>
   </PropertyGroup>
   
