--- a/src/AspNetCore/src/App.Metrics.AspNetCore.Mvc/App.Metrics.AspNetCore.Mvc.csproj
+++ b/src/AspNetCore/src/App.Metrics.AspNetCore.Mvc/App.Metrics.AspNetCore.Mvc.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <Description>App Metrics ASP.NET Core MVC features such as metric tracking on controller actions using attribute routes.</Description>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageTags>appmetrics;aspnetcore;aspnetcoremvc;metrics</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App"/>
   </ItemGroup>
 
   <ItemGroup>
