--- a/src/AspNetCore/src/App.Metrics.AspNetCore.Reporting/App.Metrics.AspNetCore.Reporting.csproj
+++ b/src/AspNetCore/src/App.Metrics.AspNetCore.Reporting/App.Metrics.AspNetCore.Reporting.csproj
@@ -1,21 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>    
-		<Description>[Obsolete - App Metrics ASP.NET Core Reporting provides the abliity to report metrics in web application] HostedService for metric reporting moved to App.Metrics.Extensions.Hosting now that HostedService is supported outside of a web context in net core 2.1.0</Description>	
-		<TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
-		<PackageTags>appmetrics;aspnetcore;metrics;reporting</PackageTags>
-	</PropertyGroup>
+    <PropertyGroup>
+        <Description>[Obsolete - App Metrics ASP.NET Core Reporting provides the abliity to report metrics in web application] HostedService for metric reporting moved to App.Metrics.Extensions.Hosting now that HostedService is supported outside of a web context in net core 2.1.0</Description>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <PackageTags>appmetrics;aspnetcore;metrics;reporting</PackageTags>
+    </PropertyGroup>
 
-  	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
-		<FrameworkReference Include="Microsoft.AspNetCore.App" />
-	</ItemGroup>
+    <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+    </ItemGroup>
 
-	<ItemGroup  Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    	<PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\App.Metrics.AspNetCore.Core\App.Metrics.AspNetCore.Core.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\App.Metrics.AspNetCore.Core\App.Metrics.AspNetCore.Core.csproj"/>
+    </ItemGroup>
 
 </Project>
