--- a/src/AspNetCore/src/App.Metrics.AspNetCore/App.Metrics.AspNetCore.csproj
+++ b/src/AspNetCore/src/App.Metrics.AspNetCore/App.Metrics.AspNetCore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>App Metrics ASP.NET Core is a an open-source web framework allowing you to record typical web metrics and expose metrics and environment information over HTTP and more.</Description>
-	<TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
+	<TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageTags>appmetrics;aspnetcore;metrics</PackageTags>
   </PropertyGroup>
 
