--- a/src/Core/src/App.Metrics.Abstractions/App.Metrics.Abstractions.csproj
+++ b/src/Core/src/App.Metrics.Abstractions/App.Metrics.Abstractions.csproj
@@ -2,8 +2,7 @@
 
   <PropertyGroup>
     <Description>App Metrics Core abstractions and interfaces for metric types, reporting, filtering and more.</Description>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">$(TargetFrameworks);net461</TargetFrameworks>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>App.Metrics</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageTags>appmetrics;metrics</PackageTags>
