--- a/src/Core/src/App.Metrics.Formatters.Json/App.Metrics.Formatters.Json.csproj
+++ b/src/Core/src/App.Metrics.Formatters.Json/App.Metrics.Formatters.Json.csproj
@@ -2,8 +2,7 @@
 
   <PropertyGroup>
     <Description>App Metrics Formatters for metrics  and environment data to JSON using Newtonsoft.Json.</Description>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">$(TargetFrameworks);net461</TargetFrameworks>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageTags>appmetrics;metrics;json</PackageTags>
   </PropertyGroup>
