--- a/src/Reporting/sandbox/MetricsReceiveSanboxApi/MetricsReceiveSanboxApi.csproj
+++ b/src/Reporting/sandbox/MetricsReceiveSanboxApi/MetricsReceiveSanboxApi.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="App.Metrics" />
+    <PackageReference Include="App.Metrics.Abstractions" />
     <PackageReference Include="Serilog.Sinks.Literate" Version="3.0.1-dev-00044" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.1-dev-00155" />
     <PackageReference Include="Serilog.AspNetCore " Version="3.1.0" />
