--- a/src/Reporting/test/App.Metrics.Reporting.FactsCommon/App.Metrics.Reporting.FactsCommon.csproj
+++ b/src/Reporting/test/App.Metrics.Reporting.FactsCommon/App.Metrics.Reporting.FactsCommon.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="App.Metrics.Abstractions" Version="$(AppMetricsCoreVersion)" />
     <PackageReference Include="App.Metrics.Core" Version="$(AppMetricsCoreVersion)" />
   </ItemGroup>
 
